fixed button position and heading overflow issue

--- a/src/Styles/_ingredientCards.scss
+++ b/src/Styles/_ingredientCards.scss
@@ -5,19 +5,23 @@
 	display: inline-block;
 	@include setPaddingAndMargin(0, 10px);
 	position: relative;
-	width: 140px;
+	width: 120px;
 	height: 110px;
 }
 
 .ic-buttons-container {
 	font-size: $smallFontSize;
+	position: absolute;
+	right: 3px;
+	bottom: 3px;
 }
 
 .ic-button {
 
 	border: none;
 	outline: none !important;
-	width: 25px;
+	width: 28px;
+	height: 18px;
 	text-align: center;
 	padding: 0;
 	color: white;
@@ -45,6 +49,10 @@
 
 }
 
+.ic-buttons-plus {
+	margin-bottom: 3px;
+}
+
 .remove {
 	color: white;
 	background-color: $primaryAccentColor;
@@ -66,6 +74,7 @@
 	height: 60px;
 	// border: solid 1px blue;
 	padding: 5px;
+	overflow-x: scroll;
 }
 
 .ic-heading {
@@ -76,22 +85,10 @@
 	word-wrap: break-word;
 }
 
-.ic-buttons-plus {
-	margin-bottom: 3px;
-	position: absolute;
-	right: 2px;
-	bottom: 19px;
-}
-
-.ic-buttons-minus {
-	position: absolute;
-	right: 2px;
-	bottom: 5px;
-}
-
 .ic-quantity {
 	position: absolute;
 	font-size: $mediumFontSize;
 	right: 1.5px;
-	bottom: 37px;
+	bottom: 40px;
+	margin-bottom: 5px;
 }
